# contentByAI.io

./: .dockerignore  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  nginx.conf  pyproject.toml  simple_test.json  test_request.json
aiwriter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apps/api/: main.py
apps/api/routers/: bundles.py  generation.py  health.py  publishing.py
data/: aiwriter.db
docs/: AI_CLIENTS.md  API.md  ARCHITECTURE.md  CONTRIBUTING.md  SETUP.md
examples/: ai_client_usage.py
reference_doc/: README.md
runs/generation_jobs/: 000f8963-2521-4d5d-ad5b-c3a9b4f85eba.json  0e2039ca-4862-48ac-ad0a-d3dfffe69d5c.json  8bc48f73-9763-4b7b-a1d0-70b9bd186dc5.json  a157dcb6-dbff-4973-a04c-0c489c30667a.json
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  main.tsx
web/src/components/layout/: MainLayout.tsx
web/src/pages/: Bundles.tsx  Dashboard.tsx  Generation.tsx  Publishing.tsx  Settings.tsx
